--- a/templates/booking.html
+++ b/templates/booking.html
@@ -15,7 +15,10 @@
        </ul>
     {% endif%}
     {%endwith%}
-    Places available: {{competition['numberOfPlaces']}}
+    <p>
+        Places available: {{competition['numberOfPlaces']}} <br>
+        Your points: {{club['points']}}
+    </p>
     <form action="/purchasePlaces" method="post">
         <input type="hidden" name="club" value="{{club['name']}}">
         <input type="hidden" name="competition" value="{{competition['name']}}">
