feat: add club points display board
- add the route /clubsPoints to server.py
- add the template clubsPoints.html
- add the link to the clubsPoints page in index.html
- add the unit test for the new route

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,5 +21,11 @@
         <input type="email" name="email" id=""/>
         <button type="submit">Enter</button>
     </form>
+    <hr>
+    <p>
+        If you just want to consult the clubs list click <a href="{{url_for('clubsPoints')}}">here</a>
+    </p>
+    
+
 </body>
 </html>
